Add node.js backed JS/CSS development toolset

--- a/django_project/core/base_templates/base.html
+++ b/django_project/core/base_templates/base.html
@@ -14,7 +14,7 @@
         margin: 0;
     }
     </style>
-    <link href="{% static 'css/ol.css' %}" media="screen">
+    <link href="{% static 'css/contrib.module.css' %}" media="screen" rel="stylesheet" type="text/css">
 
 </head>
 
