--- a/django_project/core/base_templates/base.html
+++ b/django_project/core/base_templates/base.html
@@ -7,14 +7,8 @@
     <meta http-equiv="content-type" content="text/html;charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <style>
-    html, body, #map {
-        height: 100%;
-        width: 100%;
-        margin: 0;
-    }
-    </style>
     <link href="{% static 'css/contrib.module.css' %}" media="screen" rel="stylesheet" type="text/css">
+    <link href="{% static 'css/project.module.css' %}" media="screen" rel="stylesheet" type="text/css">
 
 </head>
 
