Restructure Gruntfile and update jshintrc

--- a/django_project/lib_js/tests/browser/index.html
+++ b/django_project/lib_js/tests/browser/index.html
@@ -10,12 +10,12 @@
 
     <!-- load and configure mocha -->
     <script src="mocha.js"></script>
-    <script src="chai.js"></script>
+
     <script>
       'use strict';
-      mocha.setup('bdd')
-      mocha.slow(500)
-      mocha.timeout(3000)
+      mocha.setup('bdd');
+      mocha.slow(500);
+      mocha.timeout(3000);
     </script>
 
     <!-- load test suite -->
